# c_hash_server

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
cmd/: bench.c  main.c
include/: hash_table.h  networking.h
src/: hash_table.c  networking.c
tests/: main.c  networking.c  test_hash_table.c
